--- a/apps/data-integration/src/app/globals.css
+++ b/apps/data-integration/src/app/globals.css
@@ -17,10 +17,10 @@ body {
   min-height: 100vh;
 }
 
-::-webkit-scrollbar {
-  width: 8px;
-  height: 8px;
-}
+  ::-webkit-scrollbar {
+    width: 16px; /* Adjust the width as desired, e.g., 20px */
+    height: 16px; /* Adjust the height for horizontal scrollbar */
+  }
 
 ::-webkit-scrollbar-track {
   background: #1e293b;
